Update 1a (first alpha)

--- a/src/main/resources/assets/new_generation/lang/fr_fr.json
+++ b/src/main/resources/assets/new_generation/lang/fr_fr.json
@@ -14,8 +14,12 @@
   "advancements.now_i_have_hope.title": "Est-ce de l\u0027espoir?!",
   "advancements.hope_is_here.title": "L\u0027espoir est là!",
   "item.new_generation.hope_axe": "Hache d\u0027espoir",
+  "death.attack.testlol.player": "%1$s died by Hope trying to escape from %2$s",
   "item.new_generation.dust_upgrade": "Mise à niveau de Dust Hope",
+  "death.attack.testlol": "%1$s was trying to fight Hope",
   "item.new_generation.hope_dust": "Poussière d\u0027espoir",
   "item.new_generation.hope_pickaxe": "Pioche d\u0027espoir",
-  "advancements.now_i_have_hope.descr": "Obtenez toute l\u0027Armure de l\u0027Espoir"
+  "advancements.now_i_have_hope.descr": "Obtenez toute l\u0027Armure de l\u0027Espoir",
+  "effect.new_generation.hope_dream": "Poison of Hope",
+  "death.attack.testlol.item": "%1$s was Hopped by %2$s using %3$s"
 }
