--- a/src/main/resources/assets/new_generation/lang/de_de.json
+++ b/src/main/resources/assets/new_generation/lang/de_de.json
@@ -14,8 +14,12 @@
   "advancements.now_i_have_hope.title": "Jetzt habe ich Hoffnung!",
   "advancements.hope_is_here.title": "Die Hoffnung ist da!",
   "item.new_generation.hope_axe": "Axt der Hoffnung",
+  "death.attack.testlol.player": "%1$s died by Hope trying to escape from %2$s",
   "item.new_generation.dust_upgrade": "Staub Hoffnung Aktualisierung",
+  "death.attack.testlol": "%1$s was trying to fight Hope",
   "item.new_generation.hope_dust": "Staub der Hoffnung",
   "item.new_generation.hope_pickaxe": "Spitzhacke der Hoffnung",
-  "advancements.now_i_have_hope.descr": "Holen Sie sich die gesamte Rüstung der Hoffnung"
+  "advancements.now_i_have_hope.descr": "Holen Sie sich die gesamte Rüstung der Hoffnung",
+  "effect.new_generation.hope_dream": "Poison of Hope",
+  "death.attack.testlol.item": "%1$s was Hopped by %2$s using %3$s"
 }
