--- a/src/main/resources/assets/new_generation/lang/en_us.json
+++ b/src/main/resources/assets/new_generation/lang/en_us.json
@@ -1,25 +1,25 @@
 {
+  "death.attack.hope_death.item": "%1$s was Hopped by %2$s using %3$s",
   "item.new_generation.hope_armor_leggings": "Hope Leggings",
   "block.new_generation.hope_ore": "Ore of Hope",
   "item.new_generation.hope_hoe": "Hoe of Hope",
   "item.new_generation.hope_armor_boots": "Hope Boots",
   "advancements.hope_is_here.descr": "Get Ore of Hope",
-  "item.new_generation.hope_sword": "Sword of Hope",
+  "item.new_generation.hope_sword": "Hope Sword",
   "item.new_generation.hope_armor_helmet": "Hope Helmet",
   "item.new_generation.hope_armor_chestplate": "Hope Chestplate",
   "advancements.is_that_hope.descr": "Get Dust of Hope",
   "block.new_generation.hope_block": "Block of Hope",
   "advancements.is_that_hope.title": "Is THAT Hope?!",
-  "item.new_generation.hope_shovel": "Shovel of Hope",
+  "death.attack.hope_death": "%1$s was trying to fight Hope",
+  "item.new_generation.hope_shovel": "Hope Shovel",
   "advancements.now_i_have_hope.title": "Now I Have Hope!",
   "advancements.hope_is_here.title": "Hope Is Here!",
-  "item.new_generation.hope_axe": "Axe of Hope",
-  "death.attack.testlol.player": "%1$s died by Hope trying to escape from %2$s",
+  "item.new_generation.hope_axe": "Hope Axe",
   "item.new_generation.dust_upgrade": "Dust Hope Upgrade",
-  "death.attack.testlol": "%1$s was trying to fight Hope",
   "item.new_generation.hope_dust": "Dust of Hope",
   "item.new_generation.hope_pickaxe": "Pickaxe of Hope",
   "advancements.now_i_have_hope.descr": "Get whole Armor of Hope",
   "effect.new_generation.hope_dream": "Poison of Hope",
-  "death.attack.testlol.item": "%1$s was Hopped by %2$s using %3$s"
+  "death.attack.hope_death.player": "%1$s died by Hope trying to escape from %2$s"
 }
